# cserver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/actions/setup-compilers/: action.yml
.github/workflows/: cmake-multi-platform.yml
benchmarks/: init.cpp
cmake/: check.cpp  cserverConfig.cmake.in
docs/: doxygen.conf  layout.xml
examples/: http.cpp
examples/output/: http
examples/src/: cli.cpp  constexpr_check.cpp  http.cpp  log.cpp
include/cserver/: macro.hpp
include/cserver/clients/http/: component.hpp  request.hpp  response.hpp
include/cserver/components/: loggable_component_base.hpp  logger.hpp  work_guard.hpp
include/cserver/components/cli/: manager.hpp  struct.hpp
include/cserver/engine/: components.hpp  coroutine.hpp  network.hpp  not_implemented.hpp  use_streaming.hpp
include/cserver/engine/basic/: task_processor.hpp
include/cserver/server/handlers/: http_handler_base.hpp
include/cserver/server/http/: http_request.hpp  http_request_parser.hpp  http_response.hpp  http_stream.hpp
include/cserver/server/server/: server.hpp
include/cserver/utils/: boost_error_wrapper.hpp
src/clients/http/: component.cpp  request.cpp  response.cpp
src/components/: loggable_component_base.cpp  logger.cpp  work_guard.cpp
src/components/cli/: manager.cpp  struct.cpp
src/engine/: components.cpp  coroutine.cpp  network.cpp  not_implemented.cpp  use_streaming.cpp
src/engine/basic/: task_processor.cpp
src/server/handlers/: http_handler_base.cpp
src/server/http/: http_request.cpp  http_request_parser.cpp  http_response.cpp  http_stream.cpp
src/server/server/: server.cpp
tests/: all_meta.cpp  dependencies.cpp  meta.cpp
